# shinytime

./: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
example-app/: app.py
shinytime/: MANIFEST.in  __init__.py  shinytime.py
shinytime/distjs/: index.js
srcts/: index.tsx
