[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shinytime"
version = "0.1"
dependencies = ["shiny >= 0.6.0"]

[tool.setuptools]
packages = ["shinytime"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"shinytime" = ["distjs/*"]
