[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shinytime"
readme = "README.md"
version = "0.1.1"
dependencies = ["shiny >= 0.6.0"]

[project.urls]
Source = "https://github.com/UInt2048/shinytime"
Tracker = "https://github.com/UInt2048/shinytime/issues"

[tool.setuptools]
packages = ["shinytime"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"shinytime" = ["distjs/*"]
